[keycard onboarding] add intro screen

--- a/translations/en.json
+++ b/translations/en.json
@@ -1050,5 +1050,8 @@
     "default" : "Default",
     "token-details" : "Token details",
     "remove-token" : "Remove token",
-    "report-bug-email-template": "1. Issue Description\n(Describe the feature you would like, or briefly summarise the bug and what you did, what you expected to happen, and what actually happens. Sections below)\n\n\n2. Steps to reproduce\n(Describe how we can replicate the bug step by step.)\n-Open Status\n-...\n-Step 3, etc.\n\n\n3. Expected behavior\n(Describe what you expected to happen.)\n\n\n4. Actual behavior\n(Describe what actually happened.)\n\n\n5. Attach screenshots that can demo the problem, please\n"
+    "report-bug-email-template": "1. Issue Description\n(Describe the feature you would like, or briefly summarise the bug and what you did, what you expected to happen, and what actually happens. Sections below)\n\n\n2. Steps to reproduce\n(Describe how we can replicate the bug step by step.)\n-Open Status\n-...\n-Step 3, etc.\n\n\n3. Expected behavior\n(Describe what you expected to happen.)\n\n\n4. Actual behavior\n(Describe what actually happened.)\n\n\n5. Attach screenshots that can demo the problem, please\n",
+    "keycard-onboarding-intro-header": "Store your key on Keycard",
+    "keycard-onboarding-intro-text": "A secure, contactless, open source Hardwallet. Android only.",
+    "learn-more-about-keycard": "Learn more about Keycard"
 }
