--- a/translations/en.json
+++ b/translations/en.json
@@ -185,7 +185,7 @@
     "about-names-title": "About the names",
     "about-names-content": "Your identity is secure and private by design. You get a locally generated cryptographic keypair. The name and image are a readable version of this. They are unique. Nobody can pretend to be you. Nobody sees your name unless you provide it.",
     "about-key-storage-title": "About key storage",
-    "about-key-storage-content": "Status will never access your private key. Be sure to backup your Seed phrase. If you lose your phone it is the only way to access your keys.",
+    "about-key-storage-content": "Status will never access your private key. Be sure to backup your recovery phrase. If you lose your phone it is the only way to access your keys.",
     "encrypt-with-password": "Encrypt with password",
     "maybe-later": "Maybe later",
     "unlock": "Unlock",
@@ -1192,7 +1192,7 @@
     "ens-displayed-with": "Your messages are displayed to others with",
     "add-account" : "Add account",
     "add-an-account" : "Add an account",
-    "back-up-your-seed-phrase" : "Back up your seed phrase",
+    "back-up-your-seed-phrase" : "Back up your recovery phrase",
     "add-a-watch-account" : "Add a watch-only account",
     "account-settings" : "Account settings",
     "export-account" : "Export account",
