[fix 8853] fix change of whisper id in ens registration
A user can type in their existing name in the registration flow. Status can
confirm if they own it. After signing a transaction, the user can update the
Whisper ID to their new one.

Instead of using a hardcoded contract for stateofus, the standard `owner`
method is called to find the resolver contract of a ens name.
This allows users to set the pubkey even for ens names that are not
subdomains of stateofus

--- a/translations/en.json
+++ b/translations/en.json
@@ -1174,7 +1174,7 @@
     "ens-username-registrable": "✓ Username available!",
     "ens-username-unregistrable": "Username already taken:(",
     "ens-username-owned": "✓ Username is owned by you. ",
-    "ens-username-owned-continue": "Continuing will connect this username with your key.",
+    "ens-username-owned-continue": "Continuing will require a transaction to connect the username with your current chat key.",
     "ens-username-connected": "This user name is owned by you and connected with your Chat key.",
     "ens-custom-username-unregistrable": "Username doesn’t belong to you :(",
     "ens-custom-username-hints": "Type the entire username including the custom domain like username.domain.eth",
